styled kennel list to give more space between dog cards.  made footer fixed to bottom of page to resolve issue with positioning when user scrolled down.  edited spacing between inputs in CreateDogForm component.

--- a/client/src/components/CreateDogForm/CreateDogForm.css
+++ b/client/src/components/CreateDogForm/CreateDogForm.css
@@ -70,6 +70,10 @@ label.custom-file-label {
   cursor: pointer;
 }
 
+div.form-group {
+  margin: 0px 0px 10px;
+}
+
 .form-btn {
   margin-top: 16px;
 }
