--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer {
-  position: sticky;
+  position: fixed;
+  bottom: 0;
   width: 100%;
   background-color: #285a84;
   text-align: center;
