--- a/client/src/components/KennelList/KennelList.css
+++ b/client/src/components/KennelList/KennelList.css
@@ -12,7 +12,7 @@
 }
 
 .card-deck {
-  padding-bottom: 15px;
+  padding: 15px 0px;
   justify-content: center;
   margin-left: 0px;
   margin-right: 0px;
